# ledger-rs

./: Cargo.toml
ledger-apdu/src/: lib.rs
ledger-cli/: Cargo.toml
ledger-cli/src/: main.rs
ledger-transport-hid/: Cargo.toml
ledger-transport-tcp/: Cargo.toml
ledger-transport-tcp/src/: error.rs  lib.rs
ledger-zondax-generic/src/: lib.rs
