[package]
name = "ledger-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
simplelog = "0.12.0"

anyhow = "1.0.58"
clap = { version = "3.2.15", features = [ "derive" ] }
strum = { version = "0.24.1", features = [ "derive" ] }
tokio = { version = "1.20.1", features = [ "full" ] }

ledger-transport = { path = "../ledger-transport" }
ledger-transport-tcp = { path = "../ledger-transport-tcp", features = [ "clap" ] }
ledger-zondax-generic = { path = "../ledger-zondax-generic" }